# 20

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/L_W_20/: CMakeLists.txt
libs/L_W_20/tasks/: L_W_20.c  L_W_20.h
libs/L_W_20/tests/: L_W_20_test.c  L_W_20_test.h
libs/algorithms/: CMakeLists.txt  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/array_set/: ordered_array_set.c  ordered_array_set.h  unordered_array_set.c  unordered_array_set.h
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/file_io/: CMakeLists.txt
libs/file_io/tasks/: file_io.c  file_io.h
libs/file_io/tests/: file_io_test.c  file_io_test.h
libs/string/: CMakeLists.txt
libs/string/tasks/: string_.c  string_.h
libs/string/tests/: string_test.c  string_test.h
